--- a/Orbital7.MyGames/Orbital7.MyGames.csproj
+++ b/Orbital7.MyGames/Orbital7.MyGames.csproj
@@ -38,8 +38,8 @@
       <HintPath>..\packages\Orbital7.Extensions.1.0.1\lib\portable45-net45+win8\Orbital7.Extensions.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Orbital7.Extensions.Windows, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Orbital7.Extensions.Windows.1.0.1\lib\net45\Orbital7.Extensions.Windows.dll</HintPath>
+    <Reference Include="Orbital7.Extensions.Windows, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Orbital7.Extensions.Windows.1.0.2\lib\net45\Orbital7.Extensions.Windows.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -59,7 +59,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="GameList.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="IScraper.cs" />
+    <Compile Include="Scraper.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
