Added Game Config mappings and Save State syncing

--- a/Orbital7.MyGames/Orbital7.MyGames.csproj
+++ b/Orbital7.MyGames/Orbital7.MyGames.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="GameList.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="PlatformConfig.cs" />
     <Compile Include="Scraper.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
