--- a/Apps/DesktopApp/packages.config
+++ b/Apps/DesktopApp/packages.config
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="iTextSharp" version="5.5.8" targetFramework="net45" />
-  <package id="Orbital7.Extensions" version="1.0.1" targetFramework="net45" />
-  <package id="Orbital7.Extensions.Windows" version="1.0.7" targetFramework="net45" />
-  <package id="Orbital7.Extensions.Windows.Desktop" version="1.0.4" targetFramework="net45" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net46" />
+  <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net46" />
+  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net46" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.0.0" targetFramework="net461" />
+  <package id="System.Xml.XmlSerializer" version="4.0.11" targetFramework="net46" />
+  <package id="System.Xml.XPath" version="4.0.1" targetFramework="net461" />
 </packages>
