--- a/Apps/DesktopApp/DesktopApp.csproj
+++ b/Apps/DesktopApp/DesktopApp.csproj
@@ -168,6 +168,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Orbital7.MyGames.Local\Orbital7.MyGames.Local.csproj">
+      <Project>{10c25d8e-d3f6-476f-92b5-b67b01e7a520}</Project>
+      <Name>Orbital7.MyGames.Local</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Orbital7.MyGames.Scraping\Orbital7.MyGames.Scraping.csproj">
+      <Project>{2c2dbf16-4284-48eb-b9e8-5d221a95ffbb}</Project>
+      <Name>Orbital7.MyGames.Scraping</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Orbital7.MyGames\Orbital7.MyGames.csproj">
       <Project>{db5071f6-09db-41fd-abd0-7b21a0d9eee5}</Project>
       <Name>Orbital7.MyGames</Name>
