--- a/Orbital7.MyGames.Cloud/Orbital7.MyGames.Cloud.csproj
+++ b/Orbital7.MyGames.Cloud/Orbital7.MyGames.Cloud.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BF0E178B-7876-42CD-84E9-7476EE10C4CB}</ProjectGuid>
+    <ProjectGuid>{F363C9FE-421E-427A-8D74-2B7D8D7550BE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Orbital7.MyGames</RootNamespace>
-    <AssemblyName>Orbital7.MyGames</AssemblyName>
+    <RootNamespace>Orbital7.MyGames.Cloud</RootNamespace>
+    <AssemblyName>Orbital7.MyGames.Cloud</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -39,26 +39,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Catalog.cs" />
-    <Compile Include="CatalogEditor.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="GameList.cs" />
-    <Compile Include="CatalogConfig.cs" />
-    <Compile Include="IAccessProvider.cs" />
-    <Compile Include="IConfig.cs" />
-    <Compile Include="Platform.cs" />
-    <Compile Include="PlatformConfig.cs" />
+    <Compile Include="DropboxAccessProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="ImageSharp">
-      <HintPath>..\Lib\netstandard1.1\ImageSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbital7.Extensions">
-      <HintPath>..\..\orbital7.extensions\Orbital7.Extensions\bin\Debug\Orbital7.Extensions.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
