--- a/Orbital7.MyGames.Scraping/Orbital7.MyGames.Scraping.csproj
+++ b/Orbital7.MyGames.Scraping/Orbital7.MyGames.Scraping.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BF0E178B-7876-42CD-84E9-7476EE10C4CB}</ProjectGuid>
+    <ProjectGuid>{2C2DBF16-4284-48EB-B9E8-5D221A95FFBB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Orbital7.MyGames</RootNamespace>
-    <AssemblyName>Orbital7.MyGames</AssemblyName>
+    <RootNamespace>Orbital7.MyGames.Scraping</RootNamespace>
+    <AssemblyName>Orbital7.MyGames.Scraping</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -39,18 +39,22 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Catalog.cs" />
-    <Compile Include="CatalogEditor.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="GameList.cs" />
-    <Compile Include="CatalogConfig.cs" />
-    <Compile Include="IAccessProvider.cs" />
-    <Compile Include="IConfig.cs" />
-    <Compile Include="Platform.cs" />
-    <Compile Include="PlatformConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Scraper.cs" />
+    <Compile Include="ScraperEngine.cs" />
+    <Compile Include="Scrapers\GiantBombScraper.cs" />
+    <Compile Include="Scrapers\TheGamesDBScraper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Orbital7.MyGames\Orbital7.MyGames.csproj">
+      <Project>{bf0e178b-7876-42cd-84e9-7476ee10c4cb}</Project>
+      <Name>Orbital7.MyGames</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ImageSharp">
@@ -59,6 +63,12 @@
     <Reference Include="Orbital7.Extensions">
       <HintPath>..\..\orbital7.extensions\Orbital7.Extensions\bin\Debug\Orbital7.Extensions.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
