Transition to .NETStandard 2

--- a/src/Apps/DesktopApp/packages.config
+++ b/src/Apps/DesktopApp/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="iTextSharp" version="5.5.8" targetFramework="net45" />
-  <package id="Orbital7.Extensions" version="1.0.5" targetFramework="net45" />
-  <package id="Orbital7.Extensions.Windows" version="1.0.12" targetFramework="net45" />
-  <package id="Orbital7.Extensions.Windows.Desktop" version="1.0.10" targetFramework="net45" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0-preview1-25305-02" targetFramework="net461" />
+  <package id="Microsoft.Packaging.Tools" version="1.0.0-preview1-25301-01" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.0-preview1-25301-01" targetFramework="net461" />
+  <package id="NETStandard.Library.NETFramework" version="2.0.0-preview1-25305-02" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.0-preview1-25305-02" targetFramework="net461" />
 </packages>
