--- a/src/Orbital7.MyGames/Orbital7.MyGames.csproj
+++ b/src/Orbital7.MyGames/Orbital7.MyGames.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0-preview1-25305-02" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0-preview2-25405-01" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,7 +16,7 @@
       <HintPath>..\Lib\netstandard1.1\ImageSharp.dll</HintPath>
     </Reference>
     <Reference Include="Orbital7.Extensions">
-      <HintPath>..\..\..\orbital7.extensions\bin\Orbital7.Extensions.dll</HintPath>
+      <HintPath>..\..\..\orbital7.extensions\bin\debug\netstandard2.0\Orbital7.Extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
 
