--- a/src/Orbital7.MyGames.Scraping/Orbital7.MyGames.Scraping.csproj
+++ b/src/Orbital7.MyGames.Scraping/Orbital7.MyGames.Scraping.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Orbital7.Apis.IGDB" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Orbital7.MyGames\Orbital7.MyGames.csproj" />
   </ItemGroup>
 
